force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Previous_Fire_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Previous_Fire_Date__c</fullName>
    <label>Previous Fire Date</label>
    <type>Date</type>
</CustomField>