force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Re_enter_credit_card__c.field-meta.xml
<CustomField>
    <fullName>fw1__Re_enter_credit_card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-enter credit card</label>
    <type>Checkbox</type>
</CustomField>