force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Redistribute_Installments_Equally__c.field-meta.xml
<CustomField>
    <fullName>fw1__Redistribute_Installments_Equally__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Redistribute installments equally on amount change.</description>
    <label>Redistribute Installments Equally</label>
    <type>Checkbox</type>
</CustomField>