force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Require_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>fw1__Require_Credit_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is created for compatibility purposes. On lower versions, a credit memo is not required when payment method is Credit Memo.</description>
    <inlineHelpText>If this flag is checked, it is required that a Credit Memo is defined and selected when paying by Credit Memo.</inlineHelpText>
    <label>Require Credit Memo</label>
    <type>Checkbox</type>
</CustomField>