force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Require_Electronic_Signature__c.field-meta.xml
<CustomField>
    <fullName>fw1__Require_Electronic_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Electronic Signature</label>
    <type>Checkbox</type>
</CustomField>