force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Roll_Up_Amounts_At_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>fw1__Roll_Up_Amounts_At_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roll-Up Amounts At Opportunity Level</label>
    <type>Checkbox</type>
</CustomField>