force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Save_Profile_on_Failed_Tokenization__c.field-meta.xml
<CustomField>
    <fullName>fw1__Save_Profile_on_Failed_Tokenization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Profile on Failed Tokenization</label>
    <type>Checkbox</type>
</CustomField>