force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Second_Line__c.field-meta.xml
<CustomField>
    <fullName>fw1__Second_Line__c</fullName>
    <label>Second Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>