force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Selected_Invoice_Line_Fields__c.field-meta.xml
<CustomField>
    <fullName>fw1__Selected_Invoice_Line_Fields__c</fullName>
    <label>Selected Invoice Line Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>