force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Sender_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>fw1__Sender_Display_Name__c</fullName>
    <label>Sender Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>