force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Show_Note_Fields_In_Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>fw1__Show_Note_Fields_In_Product_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Note Fields In Product Selection</label>
    <type>Checkbox</type>
</CustomField>