force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Site__c.field-meta.xml
<CustomField>
    <fullName>fw1__Site__c</fullName>
    <description>Site where online payment is currently setup.</description>
    <label>Site</label>
    <length>80</length>
    <type>Text</type>
</CustomField>