force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Site_Guest_User_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__Site_Guest_User_ID__c</fullName>
    <label>Site Guest User ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>