force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Sort_By_Field__c.field-meta.xml
<CustomField>
    <fullName>fw1__Sort_By_Field__c</fullName>
    <label>Sort By Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>