force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Sort_By_Order__c.field-meta.xml
<CustomField>
    <fullName>fw1__Sort_By_Order__c</fullName>
    <label>Sort By Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>