force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Statement_Default_Template__c.field-meta.xml
<CustomField>
    <fullName>fw1__Statement_Default_Template__c</fullName>
    <description>This is the Statement default template</description>
    <label>Statement Default Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>