force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Store_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>fw1__Store_Credit_Card__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Store Credit Card/Bank Account</label>
    <type>Checkbox</type>
</CustomField>