force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Surcharge_When_Paying_By_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>fw1__Surcharge_When_Paying_By_Credit_Card__c</fullName>
    <label>Surcharge When Paying By Credit Card</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>