force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Terms_And_Conditions_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__Terms_And_Conditions_ID__c</fullName>
    <label>Terms And Conditions ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>