force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Terms_And_Conditions_Link__c.field-meta.xml
<CustomField>
    <fullName>fw1__Terms_And_Conditions_Link__c</fullName>
    <label>Terms And Conditions Link</label>
    <type>Url</type>
</CustomField>