force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Terms_And_Conditions_Long__c.field-meta.xml
<CustomField>
    <fullName>fw1__Terms_And_Conditions_Long__c</fullName>
    <label>Terms And Conditions Long</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>