force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Treat_Partners_As_Internal_Users__c.field-meta.xml
<CustomField>
    <fullName>fw1__Treat_Partners_As_Internal_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Give partners the same capabilities as internal users</inlineHelpText>
    <label>Treat Partners As Internal Users</label>
    <type>Checkbox</type>
</CustomField>