force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Turn_Off_Payment_Receipts__c.field-meta.xml
<CustomField>
    <fullName>fw1__Turn_Off_Payment_Receipts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Payment receipts are emailed after every payment. Check this box to turn off the emails after payments.</inlineHelpText>
    <label>Turn Off Payment Receipts</label>
    <type>Checkbox</type>
</CustomField>