force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Update_Check_Opportunity_Before_Payment__c.field-meta.xml
<CustomField>
    <fullName>fw1__Update_Check_Opportunity_Before_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Check Opportunity Before Payment</label>
    <type>Checkbox</type>
</CustomField>