force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Upload_As_File__c.field-meta.xml
<CustomField>
    <fullName>fw1__Upload_As_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Attachment as File</label>
    <type>Checkbox</type>
</CustomField>