force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Use_Billing_Periods__c.field-meta.xml
<CustomField>
    <fullName>fw1__Use_Billing_Periods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lower versions of Payment Center (i.e. below 6.0) use Next Invoice Date as basis for the billing period. Newer versions now use Next Invoice Billing Period Start/End. Use this flag to switch to the new version.</description>
    <label>Use Billing Periods</label>
    <type>Checkbox</type>
</CustomField>