force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Use_Invoice_Logo_In_Online_Payment_Page__c.field-meta.xml
<CustomField>
    <fullName>fw1__Use_Invoice_Logo_In_Online_Payment_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Invoice Logo On Payment Pages</label>
    <type>Checkbox</type>
</CustomField>