force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Use_Payment_Profile_On_Recurring__c.field-meta.xml
<CustomField>
    <fullName>fw1__Use_Payment_Profile_On_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Payment Profile On Recurring</label>
    <type>Checkbox</type>
</CustomField>