force-app/main/default/objects/fw1__Payment_Center_Setting__c/listViews/fw1__All.listView-meta.xml
<ListView>
    <fullName>fw1__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>